# computer-vision-final-project

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
core/: config.py  manager.py  registry.py
data/: name.txt  query.txt
data/samples/: DenseNet121_train.py  DenseNet169_train.py  DenseNet201.py  EfficientNetB6.py  InceptionV3.py  ResNet101.py  ResNet152.py  ResNet50.py  VGG16.py  VGG19.py
models/: base.py
models/algorithms/: DenseNet121.py  DenseNet169.py  DenseNet201.py  EfficientNetB6.py  InceptionV3.py  ResNet101.py  ResNet152.py  ResNet50.py  VGG16.py  VGG19.py
src/: dataloader.py  types.py
utils/: logger.py
