[project]
name = "computer-vision-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.13.0",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "sklearn-preprocessing>=0.1.0",
    "tensorflow>=2.20.0",
    "typer>=0.21.0",
]
