[project]
name = "computer-vision-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.9.4",
    "pydantic>=2.12.5",
    "ruff>=0.14.10",
    "sklearn-preprocessing>=0.1.0",
    "tensorflow[and-cuda]>=2.20.0",
    "typer>=0.21.0",
]
